#2973 - fixes spacing on right icon inside labeled icon button

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -834,10 +834,11 @@
   border-radius: 0px;
   border-top-left-radius: inherit;
   border-bottom-left-radius: inherit;
+  text-align: center;
 
+  margin: @labeledIconMargin;
   width: @labeledIconWidth;
   background-color: @labeledIconBackgroundColor;
-  text-align: center;
   color: @labeledIconColor;
   box-shadow: @labeledIconLeftShadow;
 }
